<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- 星星 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutStar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/feedback_shape_rate_bg"
            android:paddingBottom="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/close"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/feedback_rate_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="20dp"
                android:text="@string/feedback_rate_title"
                android:textColor="#000"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/close" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/feedback_rate_desc"
                android:textColor="#000"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <com.baofu.feedback.widget.RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="27dp"
                app:halfstart="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc"
                app:starCount="5"
                app:starEmpty="@drawable/feedback_star_nor"
                app:starFill="@drawable/feedback_star_sel"
                app:starImageHeight="54dp"
                app:starImagePadding="6dp"
                app:starImageWidth="45dp" />

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/feedback_bg_fb_btn"
                android:gravity="center"
                android:enabled="false"
                android:text="@string/feedback_rate"
                android:textColor="#fff"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/feedback_star_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 评价 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutFeedBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/feedback_shape_rate_bg"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/fb_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/feedback"
                android:textColor="#000"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descFb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/feedback_fb_des"
                android:textColor="#000"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fb_title" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/feedback_bg_fb_edit_text"
                android:textSize="17dp"
                android:gravity="start"
                android:hint="@string/feedback_fb_hint"
                android:padding="12dp"
                android:textColor="#000"
                android:textColorHint="#B3B3B3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descFb" />

            <TextView
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/feedback_fb_submit"
                android:textColor="#dA0044"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />
            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#AFAFAF"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/submit"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>